--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,6 @@ button {
   color: #fff;
   padding: 20px;
 }
+.shadow-subtle {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05); /* very soft shadow */
+}
